tests/neg-custom-args/i5498-postfixOps.check
-- Error: tests/neg-custom-args/i5498-postfixOps.scala:4:2 -------------------------------------------------------------
4 |  1 second // error: usage of postfix operator
  |  ^
  |  postfix operator `second` needs to be enabled
  |  by making the implicit value scala.language.postfixOps visible.
  |  ----
  |  This can be achieved by adding the import clause 'import scala.language.postfixOps'
  |  or by setting the compiler option -language:postfixOps.
  |  See the Scaladoc for value scala.language.postfixOps for a discussion
  |  why the feature needs to be explicitly enabled.
-- Error: tests/neg-custom-args/i5498-postfixOps.scala:6:23 ------------------------------------------------------------
6 |  Seq(1, 2).filter(List(1,2) contains) // error: usage of postfix operator
  |                   ^^^^^^^^^
  |                   postfix operator `contains` needs to be enabled
  |                   by making the implicit value scala.language.postfixOps visible.
  |                   ----
  |                   This can be achieved by adding the import clause 'import scala.language.postfixOps'
  |                   or by setting the compiler option -language:postfixOps.
  |                   See the Scaladoc for value scala.language.postfixOps for a discussion
  |                   why the feature needs to be explicitly enabled.